k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          #image: stephengrider/multi-client
          image: us-central1-docker.pkg.dev/micro-pilot-471618-g5/k8multicontainer/multi-client:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m" # Request 0.25 of a CPU core
              memory: "64Mi" # Request 64 Megabytes of RAM
