k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          #image: stephengrider/multi-worker
          image: us-central1-docker.pkg.dev/micro-pilot-471618-g5/k8multicontainer/multi-worker:latest
      resources:
            requests:
              cpu: "250m" # Request 0.25 of a CPU core
              memory: "64Mi" # Request 64 Megabytes of RAM
