k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress-service
spec:
  rules:
  - http:
      paths:
        - path: "/*"
          pathType: ImplementationSpecific
          backend:
            service:
              name: client-cluster-ip-service
              port:
                number: 3000
        - path: "/api/*"
          pathType: ImplementationSpecific
          backend:
            service:
              name: server-cluster-ip-service
              port:
                number: 5000
